:zap: 랜딩페이지 반응형 완료

--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -3,6 +3,23 @@ $tablet:768px;
 $laptop: 1020px;
 $desktop: 1400px;
 
+// Mixins
+@mixin desktop {
+  @media (max-width: #{$desktop}) {
+    @content;
+  }
+}
+@mixin laptap {
+  @media (max-width: #{$laptop}) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media (max-width: #{$tablet}) {
+    @content;
+  }
+}
+
 .modal_signIn {
   position: fixed;
   top: 0;
