--- a/src/css/Landing.scss
+++ b/src/css/Landing.scss
@@ -342,6 +342,37 @@
 // }
 
 
+// 반응형 Break Point
+$phone: 0px;
+$tablet:768px;
+$laptop: 1020px;
+$desktop: 1400px;
+
+// Mixins
+
+@mixin phone {
+  @media (min-width: #{$phone}) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media (min-width: #{$tablet}) {
+    @content;
+  }
+}
+@mixin laptap {
+  @media (min-width: #{$laptop}) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media (min-width: #{$desktop}) {
+    @content;
+  }
+}
+
+
+
 .video_box {
   
   // color: white;
@@ -388,14 +419,34 @@
       // right: 50%;
       top: 45%;
       
+      left: 400px;
       // right: 450px;
-      right: 1050px;
+      // right: 1050px;
       // transform: translate(+50%, -50%);
       transform: translateY(-50%);
+      
       
       writing-mode: vertical-lr;
       text-orientation: upright;
       text-align: center;
+
+      @include phone {
+        left: 70px;
+      }
+      @include tablet {
+        left: 200px;
+      }
+      @include laptap {
+        left: 300px;
+        // right: 1050px;
+      }
+      @include desktop() {
+        left: 400px;
+        // right: 1050px;
+      }
+      
+      
+      
 
       .brackets_top {
         color: whitesmoke;
@@ -425,6 +476,7 @@
         margin-bottom: 20px;
         margin-left: 20px;
         
+        
         animation-name: smoky;
         text-shadow: whitesmoke;
         animation-duration: 5s;
@@ -434,11 +486,18 @@
         // animation: smoky 5s 3s both;
 
         // animation-delay: 0;
+      
+        
+          font-size: 3.7vh;
+        
+      
+
 
       }
       .landing_text_intro_2 {
         // color: whitesmoke;
-        font-size: 1.8rem;
+        // font-size: 1.8rem;
+        font-size: 3.7vh;
         // font-weight: bold;
         // text-align: right;
         margin-bottom: 20px;
@@ -453,7 +512,8 @@
       }
       .landing_text_intro_3 {
         // color: whitesmoke;
-        font-size: 1.8rem;
+        // font-size: 1.8rem;
+        font-size: 3.7vh;
         // font-weight: bold;
         // text-align: center;
         // display: flex;
