--- a/src/css/SignUp.scss
+++ b/src/css/SignUp.scss
@@ -197,6 +197,18 @@
             padding-right: 0.9rem;
           }
         }
+        .errmsg {
+          
+            // float: right;
+            position: absolute;
+            left: 18%;
+            // padding-right: 10px;
+            padding-top: 10px;
+            font-size: 80%;
+            color: red;
+            padding-right: 0.9rem;
+          
+        }
       }
 
       .button_container_InSignUp {
