--- a/src/css/Button.scss
+++ b/src/css/Button.scss
@@ -6,6 +6,8 @@ $yellow: yellow;
 $black: rgba(24, 10, 10, 0.932);
 $lightGray: rgb(190, 188, 188);
 
+
+
 @mixin button-color($color) {
   background: $color;
   &:hover {
@@ -265,5 +267,25 @@ $lightGray: rgb(190, 188, 188);
     justify-content: space-between;
     width: 150px;
     align-items: center;
+  }
+}
+
+// phone 해상도에 맞춘 반응형
+@media (max-width: 767px) {
+  .Button {
+    &.small {
+      font-size: 0.9rem;
+      justify-content: center;
+    }
+    &.middleWidth_main_btn {
+      width: 100px;
+    }
+    // 소셜로그인 버튼 조절, 참고 폰트크기: medium이 defualt로 설정되어 있음.
+    &.medium {
+      justify-content: center;
+    }
+    &.smallWidth_singin {
+      width: 200px;
+    }
   }
 }
