--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -268,7 +268,9 @@ $desktop: 1400px;
       // height: 100vh;
       // border-radius: 0;
       h1 {
-        font-size: 2.2rem;
+        margin-top: 30px;
+        margin-bottom: 25px;
+        font-size: 2rem;
       }
       .box {
         flex-direction: column;
@@ -276,11 +278,23 @@ $desktop: 1400px;
           float: unset;
           width: 95%;
         }
+        //button.scss 반응형도 같이 핸들링해야함.
+        .button_container_signin {
+          margin-top: unset;
+          margin-right: 6%;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          .signIn_icon {
+            display: none;
+          }
+        }
         .division_line {
           display: none;
         }
         .container2_siginIn {
           width: 95%;
+          padding-top: 15px;
         }
       } 
     }
