--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -295,6 +295,10 @@ $desktop: 1400px;
         .container2_siginIn {
           width: 95%;
           padding-top: 15px;
+          .socialLogin {
+            padding-right: 4.5%;
+            padding-left: 7%;
+          }
         }
       } 
     }
