--- a/src/css/Button.scss
+++ b/src/css/Button.scss
@@ -285,7 +285,7 @@ $lightGray: rgb(190, 188, 188);
       justify-content: center;
     }
     &.smallWidth_singin {
-      width: 200px;
+      width: 100%;
     }
   }
 }
