--- a/src/css/CompletedFindEmail.scss
+++ b/src/css/CompletedFindEmail.scss
@@ -112,3 +112,49 @@
 }
 
 
+// phone 해상도 맞춤 반응형
+@media (max-width: 767px) {
+  .modal_CompletedFindEmail {
+    .modal_CompletedFindEmail_content {
+      width: 270px;
+      padding-right: unset;
+      // width: 100vw;
+      // height: 100vh;
+      // border-radius: 0;
+      h2 {
+        margin-top: 20px;
+        margin-bottom: 25px;
+        margin-left: unset;
+        justify-content: center;
+        font-size: 1.5rem;
+      }
+      h4 {
+        font-size: 0.68rem;
+      }
+      .email_result_container {
+        
+        .email_result_div {
+          flex-direction: column;
+          .email_findEmail_2 {
+            padding-left: unset;
+          }
+          
+          .find_pw_title {
+            padding-left: unset;
+          }
+          .userInfo_input_container_in_findPw {
+            margin: unset;
+            margin-bottom: 20px;
+            padding-left: 5px;
+          }
+        }
+        //button.scss 반응형도 같이 핸들링해야함.
+        // .btn_result_findEmail_container {
+        //   // margin-top: 7%;
+        // }
+      } 
+    }
+  }
+}
+
+
