--- a/src/css/CompletedFindPw.scss
+++ b/src/css/CompletedFindPw.scss
@@ -21,11 +21,13 @@
 
     background: white;
     position: relative;
-    width: 40%;
+    // width: 40%;
+    width: 475px;
     text-align: center;
     border-radius: 10px;
     color: black;
-    padding: 2%;
+    // padding: 2%;
+    padding: 37px;
     h2 {
       margin-top: unset;
       margin-bottom: 6%;
