:zap: completedFindPw-phone 3차 반응형 완료

--- a/src/css/CompletedFindPw.scss
+++ b/src/css/CompletedFindPw.scss
@@ -148,7 +148,7 @@
   .modal_CompletedFindPw {
     .modal_CompletedFindPw_content {
       width: 270px;
-      padding-right: unset;
+      padding: 1%;
       // width: 100vw;
       // height: 100vh;
       // border-radius: 0;
