--- a/src/css/CompletedFindPw.scss
+++ b/src/css/CompletedFindPw.scss
@@ -110,9 +110,9 @@
     //--------------------- 로딩 중 로고-------------------------\\
 
     .spinner {
-      width: 40px;
-      height: 40px;
-      margin: 100px auto;
+      // width: 40px;
+      // height: 40px;
+      // margin: 100px auto;
       background-color: #333;
     
       border-radius: 100%;  
