--- a/src/css/SignUp.scss
+++ b/src/css/SignUp.scss
@@ -133,7 +133,7 @@
       
       input {
         display: flex;
-        width: 95%;
+        width: 100%;
         font-size: 0.9rem;
         border-radius: 5px;
         border-width: 1.6px;
@@ -304,3 +304,72 @@
 
 }
 
+
+// phone 해상도 맞춤 반응형
+@media (max-width: 767px) {
+  .modal_SignUp {
+    .modal_SignUp_content {
+      width: 280px;
+      padding-right: unset;
+      // width: 100vw;
+      // height: 100vh;
+      // border-radius: 0;
+      h2 {
+        display: none;
+        // margin-top: 30px;
+        // margin-bottom: 25px;
+        // font-size: 1.7rem;
+      }
+      .signUp_box {
+        flex-direction: column;
+        .local_new_user {
+          float: unset;
+          width: 95%;
+          input {
+            display: flex;
+            width: 100%;
+            font-size: 0.5rem;
+            border-radius: 5px;
+            border-width: 1.6px;
+            border-color: rgb(143, 143, 143);
+            padding: 0.48rem 0.9rem;
+            // margin: 0.4rem;
+            
+          }
+    
+          input[type="email"]::placeholder,
+          input[type="password"]::placeholder,
+          input[type="text"]::placeholder {
+            font-size: 0.8rem;
+            color: rgb(166, 163, 168);
+            display: flex;
+            align-content: center;
+          }
+          .control_margin_top {
+            margin-top: 0.7rem;
+          }
+          
+        }
+        //button.scss 반응형도 같이 핸들링해야함.
+        .button_container_InSignUp {
+          margin-top: 5%;
+      
+        }
+        .division_line {
+          display: none;
+        }
+        .container2_siginIn {
+          width: 95%;
+          margin-top: unset;
+          .socialLogin {
+            padding-right: 4.5%;
+            padding-left: 7%;
+            #social_login_title {
+              display: none;
+            }
+          }
+        }
+      } 
+    }
+  }
+}
