:bug: 소셜 로그인 폰트 수정(확대)

--- a/src/css/Button.scss
+++ b/src/css/Button.scss
@@ -271,6 +271,7 @@ $lightGray: rgb(190, 188, 188);
     justify-content: space-between;
     width: 150px;
     align-items: center;
+    font-size: 0.9rem;
   }
 }
 
