--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -11,6 +11,7 @@ $dark: #212121;
 body {
   margin: 0;
   font-family: Montserrat, sans-serif;
+  
 }
 
 figure {
@@ -21,13 +22,15 @@ figure {
   height: 100vh;
   overflow: scroll;
   scroll-snap-type: y mandatory;
+
+
 }
 
 .scrolledsection {
   position: relative;
   scroll-snap-align: start;
-  height: 104.5vh;
-  background-color: $dark;
+  // height: 104.5vh;
+  background-color: #000000;
 
   &:nth-child(2) {
     background-color: $primary;
@@ -56,63 +59,63 @@ figure {
   // }
 }
 
-.scrolledsection__content {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  color: white;
-  text-align: center;
-  font-size: 1.2rem;
+// .scrolledsection__content {
+//   display: flex;
+//   flex-wrap: wrap;
+//   justify-content: center;
+//   align-items: center;
+//   height: 100vh;
+//   color: white;
+//   text-align: center;
+//   font-size: 1.2rem;
 
-  span {
-    display: block;
-  }
-}
+//   span {
+//     display: block;
+//   }
+// }
 
-.scrolledsection__inner {
-  border: 2px solid white;
-  padding: 1rem;
-  transition: opacity 800ms, transform 800ms;
-  opacity: 0;
-  transform: translate3d(0, -1.5rem, 0);
+// .scrolledsection__inner {
+//   border: 2px solid white;
+//   padding: 1rem;
+//   transition: opacity 800ms, transform 800ms;
+//   opacity: 0;
+//   transform: translate3d(0, -1.5rem, 0);
 
-  &.is-visible {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
-}
+//   // &.is-visible {
+//   //   opacity: 1;
+//   //   transform: translate3d(0, 0, 0);
+//   // }
+// }
 
-.scrolledsection__bg-image {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+// .scrolledsection__bg-image {
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
 
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-  }
+//   img {
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+//     display: block;
+//   }
 
-  &::after {
-    display: block;
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.3);
-    transition: background 1000ms;
-  }
+//   &::after {
+//     display: block;
+//     content: "";
+//     width: 100%;
+//     height: 100%;
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     background: rgba(0, 0, 0, 0.3);
+//     transition: background 1000ms;
+//   }
 
-  &.is-visible {
-    &::after {
-      background: rgba(0, 0, 0, 0.3);
-    }
-  }
-}
+//   &.is-visible {
+//     &::after {
+//       background: rgba(0, 0, 0, 0.3);
+//     }
+//   }
+// }
