--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -263,6 +263,7 @@ $desktop: 1400px;
   .modal_signIn {
     .modal_signIn_content {
       width: 270px;
+      height: auto;
       padding-right: unset;
       // width: 100vw;
       // height: 100vh;
@@ -304,3 +305,50 @@ $desktop: 1400px;
     }
   }
 }
+
+// // phone 해상도 맞춤 반응형
+// @media (max-height: 375px) {
+//   .modal_signIn {
+//     .modal_signIn_content {
+//       // width: 270px;
+//       padding-right: unset;
+//       width: 70vw;
+//       height: 70vh;
+//       // border-radius: 0;
+//       h1 {
+//         margin-top: 30px;
+//         margin-bottom: 25px;
+//         font-size: 2rem;
+//       }
+//       .box {
+//         // flex-direction: column;
+//         .container_signIn {
+//           float: unset;
+//           width: 95%;
+//         }
+//         //button.scss 반응형도 같이 핸들링해야함.
+//         .button_container_signin {
+//           margin-top: unset;
+//           margin-right: 6%;
+//           display: flex;
+//           flex-direction: row;
+//           justify-content: space-between;
+//           .signIn_icon {
+//             display: none;
+//           }
+//         }
+//         .division_line {
+//           display: none;
+//         }
+//         .container2_siginIn {
+//           width: 95%;
+//           padding-top: 15px;
+//           .socialLogin {
+//             padding-right: 4.5%;
+//             padding-left: 7%;
+//           }
+//         }
+//       } 
+//     }
+//   }
+// }
